[package]
edition = "2021"
name = "xmtp_api_grpc_gateway"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.68"
base64 = "0.22.0"
futures = "0.3.29"
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
js-sys = "0.3"
prost = { version = "^0.12", features = ["prost-derive"] }
prost-types = "^0.12"
reqwest = { version = "0.11.20", features = ["json"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
wasmtimer = "0.2.0"
xmtp_cryptography = { path = "../xmtp_cryptography", features = ["ws"] }
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }
xmtp_v2 = { path = "../xmtp_v2" }

[dev-dependencies]
uuid = { version = "1.3.1", features = ["v4"] }
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = "s"
