[package]
edition = "2021"
license.workspace = true
name = "xmtp_api_http"
version.workspace = true

[dependencies]
async-trait.workspace = true
bytes = "1.9"
futures = { workspace = true, default-features = false }
governor = { version = "0.10", default-features = false, features = [
  "std",
  "quanta",
  "jitter",
] }
http = "1.2"
pin-project-lite = "0.2.15"
prost.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }

xmtp_common.workspace = true

[dev-dependencies]
hex.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
xmtp_proto = { path = "../xmtp_proto", features = ["test-utils"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
ctor.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
wasm-bindgen-test.workspace = true

[features]
test-utils = ["xmtp_proto/test-utils"]
