[package]
edition = "2024"
license.workspace = true
name = "xmtp_api_http"
version.workspace = true

[lints]

[dependencies]
async-trait.workspace = true
bytes = "1.9"
futures = { workspace = true, default-features = false }
governor = { version = "0.10", default-features = false, features = [
  "std",
  "quanta",
  "jitter",
] }
http = "1.2"
pin-project-lite = "0.2.15"
prost.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
xmtp_common.workspace = true
xmtp_configuration.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }

color-eyre = { workspace = true, optional = true }
const_format = { workspace = true, optional = true }
httpmock = { version = "0.8.0-alpha.1", optional = true, features = ["record"] }
rustls = { version = "0.23.31", features = ["ring"], optional = true }
tokio = { workspace = true, features = [
  "sync",
  "rt",
  "macros",
], optional = true }
toxiproxy_rust = { workspace = true, optional = true }
xshell = { version = "0.2.7", optional = true }
hex = { workspace = true, optional = true }


[dev-dependencies]
hex.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros"] }
toxiproxy_rust = { workspace = true }
xmtp_proto = { path = "../xmtp_proto", features = ["test-utils"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
ctor.workspace = true
httpmock = "0.8.0-alpha.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
wasm-bindgen-test.workspace = true

[features]
test-utils = ["xmtp_proto/test-utils", "dep:toxiproxy_rust"]
# Record new responses
record = [
  "dep:color-eyre",
  "dep:xshell",
  "dep:httpmock",
  "httpmock/record",
  "rustls",
  "const_format",
  "tokio",
  "xmtp_configuration/test-utils",
  "hex",
]

[[bin]]
doc = false
name = "record-http"
path = "bin/record/main.rs"
required-features = ["record"]
