[package]
edition = "2021"
name = "xmtp_api_mls_gateway"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.68"
futures = "0.3.29"
reqwest = { version = "0.12.5", features = ["json", "stream"] }
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
opt-level = "s"
