[package]
edition = "2024"
license.workspace = true
name = "xmtp_api_http"
version.workspace = true

[lints]

[dependencies]
async-trait.workspace = true
bytes = "1.9"
futures = { workspace = true, default-features = false }
http = "1.2"
pin-project-lite = "0.2.15"
prost.workspace = true
thiserror.workspace = true
tonic = { workspace = true, default-features = false }
tonic-web-wasm-client = "0.6.2"
tracing.workspace = true
url.workspace = true
xmtp_common.workspace = true
xmtp_configuration.workspace = true
xmtp_proto = { path = "../xmtp_proto", features = ["proto_full"] }

toxiproxy_rust = { workspace = true, optional = true }


[dev-dependencies]
hex.workspace = true
toxiproxy_rust = { workspace = true }
xmtp_proto = { path = "../xmtp_proto", features = ["test-utils"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
tokio = { workspace = true, features = ["macros", "time"] }
wasm-bindgen-test.workspace = true

[features]
default = []
test-utils = ["xmtp_proto/test-utils", "dep:toxiproxy_rust"]
