[package]
name = "xmtp_archive"
edition = "2024"
license.workspace = true
version.workspace = true

[lints]
workspace = true

[features]
test-utils = ["xmtp_common/test-utils"]

[dependencies]
aes-gcm.workspace = true
async-compression.workspace = true
async-trait.workspace = true
futures = { workspace = true, features = ["alloc", "std"] }
futures-util.workspace = true
openmls.workspace = true
pin-project-lite.workspace = true
prost.workspace = true
reqwest = { workspace = true, features = ["stream"] }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
xmtp_common.workspace = true
xmtp_db.workspace = true
xmtp_mls_common.workspace = true
xmtp_proto.workspace = true

[dev-dependencies]
xmtp_common = { workspace = true, features = ["test-utils"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
xmtp_common.workspace = true
chrono = { workspace = true, features = ["wasmbind"] }
getrandom = { workspace = true, features = ["wasm_js"] }
wasm-bindgen-test.workspace = true
