[package]
name = "xmtp_components"
version = "0.1.0"
edition = "2021"
rust-version = "1.64"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
xmtp = { path = "../xmtp" }
xmtp_networking = { path = "../xmtp_networking" }
xmtp_proto = { path = "../xmtp_proto" }
