[package]
edition = "2021"
name = "xmtp_content_types"
version.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
base64 = "0.21"
hex = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing.workspace = true

# XMTP/Local
xmtp_common = { workspace = true }
xmtp_proto = { workspace = true, features = ["convert"] }

[dev-dependencies]
xmtp_common = { workspace = true, features = ['test-utils'] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tonic = { version = "0.12", features = ["transport"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
