[package]
edition = "2024"
name = "xmtp_content_types"
version.workspace = true
license.workspace = true

[features]
test-utils = []

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
prost = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing.workspace = true

# XMTP/Local
xmtp_common = { workspace = true }
xmtp_proto = { workspace = true }

[dev-dependencies]
xmtp_common = { workspace = true, features = ['test-utils'] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test.workspace = true
